k8s/deployment-typetwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typetwo-deployment
  labels:
    app: typetwo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typetwo
  template:
    metadata:
      labels:
        app: typetwo
    spec:
      containers:
      - name: typetwo-container
        image: typetwo-app:1.0
        ports:
        - containerPort: 8080
