k8s/service-typeone.yaml
apiVersion: v1
kind: Service
metadata:
  name: typeone-service
spec:
  selector:
    app: typeone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
