k8s/service-typetwo.yaml
apiVersion: v1
kind: Service
metadata:
  name: typetwo-service
spec:
  selector:
    app: typetwo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
